# personal-wiki

./: .gitignore  Cargo.toml
examples/: config.json
examples/pages/: epic_page_2  example_3  example_page  example_page_2  index  other_other_page  other_page
src/: args.rs  build.rs  html.rs  main.rs  new.rs  page.rs  server.rs  template.rs
static/: api.js  help.txt  index.html  index.js  parse-url.js  redirect-to-home.html  search.js  set-content.js  styles.css  title.js  version.txt
static/assets/: index.js  styles.css
