[package]
name = "personal-wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.7.5"
markdown = "1.0.0-alpha.21"
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
